--- a/src/main/resources/templates/index.mustache
+++ b/src/main/resources/templates/index.mustache
@@ -2,23 +2,31 @@
 
     <h1>스프링 부트로 시작하는 웹서비스</h1>
     <div class="col-md-12">
+        <!-- 로그인 기능 영역 -->
         <div class="row">
             <div class="col-md-6">
                 <a href="/posts/save" role="button" class="btn btn-primary">글 등록</a>
+                {{#userName}}
+                    Login in as: <span id="user">{{userName}}</span>
+                    <a href="/logout" class="btn btn-info active" role="button">Logout</a>
+                {{/userName}}
+                {{^userName}}
+                    <a href="/oauth2/authorization/google" class="btn btn-success active" role="doc-subtitle">Goolge Login</a>
+                {{/userName}}
             </div>
         </div>
     </div>
 
     <!-- 목록 영역 -->
     <table class="table table-horizontal table-bordered">
-        <thred class="thred-strong">
+        <thead class="thred-strong">
             <tr>
                 <th>게시글번호</th>
                 <th>제목</th>
                 <th>작성자</th>
                 <th>최종수정일</th>
             </tr>
-        </thred>
+        </thead>
         <tbody id="tbody">
         {{#posts}}
             <tr>
